<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    android:id="@+id/clMCards">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/primary"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/flMCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:fontFamily="@font/eras"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <ImageButton
                android:id="@+id/ibOpciones"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/primary"
                app:tint="@color/white"
                android:src="@drawable/ic_opciones"
                android:layout_gravity="end"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lyInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cvTopBar"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/ibCarpeta"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_folder_smart"
                android:backgroundTint="@color/white"
                android:layout_gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tvTituloCategoria"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="fill"
                android:textStyle="bold"
                android:text="@string/texto_prueba"
                android:textSize="22sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/ibCarpeta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginVertical="10dp"/>

        <TextView
            android:id="@+id/tvDescripcionCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_largo"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tvTextoInicial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/texto_inicial_flashcards"
        app:layout_constraintTop_toBottomOf="@+id/lyInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="25sp"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/gray"/>

    <ImageView
        android:id="@+id/ivTriste"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvTextoInicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0.7"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFlashCards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/lyInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"/>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCrear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add"
            app:fabSize="normal"
            app:tint="@color/white"
            android:backgroundTint="@color/secundary" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>