<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/primary"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/flMCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:fontFamily="@font/eras"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cvTopBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:cardBackgroundColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="13dp"
                app:cardCornerRadius="10dp"
                android:elevation="18dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="10dp"
                android:elevation="18dp"
                app:cardBackgroundColor="@color/primary"
                android:layout_marginHorizontal="@dimen/cardMarginHorizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="19dp"
                            android:layout_marginEnd="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/logo_memotori"
                            app:tint="@color/black" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/logo_memotori"
                            android:layout_margin="@dimen/cardItemsMargin"/>

                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardItemsMargin"
                        android:hint="@string/etUsuario"
                        app:boxBackgroundMode="outline"
                        app:boxBackgroundColor="#FFFFFFFF"
                        app:boxStrokeWidthFocused="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:textColor="#000000"
                            android:textColorHint="#808080"
                            android:padding="14dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/cardItemsMargin"
                        android:hint="@string/etPassword"
                        app:boxBackgroundMode="outline"
                        app:boxBackgroundColor="#FFFFFFFF"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:textColor="#000000"
                            android:textColorHint="#808080"
                            android:padding="14dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secundary_text"
                        android:text="@string/forgotten_password"
                        android:layout_gravity="end"
                        android:layout_margin="@dimen/cardItemsMargin"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnLogin"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/btnLogin"
                            app:layout_constraintTop_toTopOf="parent"
                            android:backgroundTint="@color/secundary"
                            android:textColor="@color/white"
                            android:layout_margin="@dimen/cardItemsMargin"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="@id/btnLogin"
                            app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
                            app:layout_constraintStart_toStartOf="@id/btnLogin"
                            app:layout_constraintEnd_toEndOf="@id/btnLogin"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/black" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/cardMarginHorizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="150dp"
                android:layout_height="4dp"
                android:background="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orLogin"
                android:layout_marginHorizontal="@dimen/cardMarginHorizontal"/>

            <View
                android:layout_width="150dp"
                android:layout_height="4dp"
                android:background="@color/black"/>

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/cardMarginHorizontal"
            android:gravity="center">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="@dimen/btnRedes"
                    android:layout_height="@dimen/btnRedes"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="3dp"
                    android:background="@color/black"/>

                <ImageButton
                    android:layout_width="@dimen/btnRedes"
                    android:layout_height="@dimen/btnRedes"
                    android:src="@drawable/facebook_icon"
                    android:backgroundTint="@color/secundary"
                    android:background="@color/secundary"
                    android:padding="5dp"
                    app:tint="@color/white"
                    android:scaleType="centerCrop"
                    android:contentDescription="Ingrsar con facebook"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <View
                    android:layout_width="@dimen/btnRedes"
                    android:layout_height="@dimen/btnRedes"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="3dp"
                    android:background="@color/black"/>

                <ImageButton
                    android:layout_width="@dimen/btnRedes"
                    android:layout_height="@dimen/btnRedes"
                    android:src="@drawable/instagram_icon"
                    android:background="@color/secundary"
                    android:padding="5dp"
                    app:tint="@color/white"
                    android:scaleType="centerCrop"
                    android:contentDescription="Ingrsar con instagram"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="@dimen/btnRedes"
                    android:layout_height="@dimen/btnRedes"
                    android:layout_marginTop="3dp"
                    android:layout_marginStart="3dp"
                    android:background="@color/black"/>

                <ImageButton
                    android:layout_width="@dimen/btnRedes"
                    android:layout_height="@dimen/btnRedes"
                    android:src="@drawable/twitter_icon"
                    android:background="@color/secundary"
                    android:padding="5dp"
                    app:tint="@color/white"
                    android:scaleType="centerCrop"
                    android:contentDescription="Ingrsar con X"/>

            </FrameLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>