<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/primary"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent">

        <FrameLayout
            android:id="@+id/flMCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:fontFamily="@font/eras"
                android:textStyle="bold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"/>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cvTopBar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:cardBackgroundColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="13dp"
                android:layout_marginTop="13dp"
                app:cardCornerRadius="10dp"
                android:elevation="18dp">

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="10dp"
                android:elevation="18dp"
                app:cardBackgroundColor="@color/secundary"
                android:layout_marginHorizontal="@dimen/cardMarginHorizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="19dp"
                            android:layout_marginEnd="8dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/logo_memotori"
                            app:tint="@color/black" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/logo_memotori"
                            android:layout_margin="@dimen/cardItemsMargin"
                            app:tint="@color/white"/>

                    </FrameLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="@dimen/cardMarginHorizontal"
                        android:hint="@string/et_user_name"
                        app:boxBackgroundMode="outline"
                        app:boxBackgroundColor="#FFFFFFFF"
                        app:boxStrokeWidthFocused="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsuario"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPersonName"
                            android:textColor="#000000"
                            android:textColorHint="#808080"
                            android:padding="14dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="@dimen/cardMarginHorizontal"
                        android:hint="@string/etEmail"
                        app:boxBackgroundMode="outline"
                        app:boxBackgroundColor="#FFFFFFFF"
                        app:boxStrokeWidthFocused="2dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textEmailAddress"
                            android:textColor="#000000"
                            android:textColorHint="#808080"
                            android:padding="14dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="@dimen/cardMarginHorizontal"
                        android:hint="@string/etPassword"
                        app:boxBackgroundMode="outline"
                        app:boxBackgroundColor="#FFFFFFFF"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:textColor="#000000"
                            android:textColorHint="#808080"
                            android:padding="14dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_marginHorizontal="@dimen/cardMarginHorizontal"
                        android:hint="@string/etPassword"
                        app:boxBackgroundMode="outline"
                        app:boxBackgroundColor="#FFFFFFFF"
                        app:boxStrokeWidthFocused="2dp"
                        app:endIconMode="password_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPasswordConfirm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:textColor="#000000"
                            android:textColorHint="#808080"
                            android:padding="14dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnRegister"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/btnResgister"
                            app:layout_constraintTop_toTopOf="parent"
                            android:backgroundTint="@color/primary"
                            android:textColor="@color/white"
                            android:layout_margin="@dimen/cardItemsMargin"/>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toTopOf="@id/btnRegister"
                            app:layout_constraintBottom_toBottomOf="@+id/btnRegister"
                            app:layout_constraintStart_toStartOf="@id/btnRegister"
                            app:layout_constraintEnd_toEndOf="@id/btnRegister"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/black" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>